--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,28 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+  <h1 id="bigOne"></h1>
+
+
+  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyA6-B5miXtuD48PPar3XiYYz0zgmxb9V40",
+      authDomain: "test-aedec.firebaseapp.com",
+      databaseURL: "https://test-aedec.firebaseio.com",
+      projectId: "test-aedec",
+      storageBucket: "test-aedec.appspot.com",
+      messagingSenderId: "806268806558"
+    };
+    firebase.initializeApp(config);
+  </script>
+<script>
+  var bigOne = document.getElementById('bigOne');
+  var dbRef = firebase.database().ref().child('text');
+  dbRef.on('value', span => bigOne.innerText = span.val());
+</script>
 </body>
 </html>
